--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-pyrogram
-tgcrypto
+async-lru==1.0.2
+pony==0.7.14
+psycopg2==2.9.2
+pyaes==1.6.1
+Pyrogram==1.2.20
+PySocks==1.7.1
+pytz==2021.3
+TgCrypto==1.2.2
+typing-extensions==4.0.1
